--- a/index.html
+++ b/index.html
@@ -271,6 +271,14 @@
                     <a href="https://figma.com/proto/cdLpAFIQHqNVE3iQRIMQC3/Travel-app?node-id=13-8&node-type=canvas&t=1C7qfPtjSxBq7dUz-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1&starting-point-node-id=13%3A3">Visit design</a>
                 </div>
             </li>
+            <li>
+                <div>
+                    <p>Instagram design on figma</p>
+                    <a href="https://www.figma.com/proto/ymfM2nQeefETKyVaJEuvq9/nxtpro?node-id=0-1&p=f&t=BBMQt53WTKEXBGpP-0&scaling=scale-down&content-scaling=fixed&page-id=0%3A1">Visit design</a>
+                    <p>project detaiks</p>
+                    <a href="https://drive.google.com/file/d/1Dx-mAXc4n63YV3QhODmkzJSTxt0lBw7N/view?usp=sharing">View details</a>
+                </div>
+            </li>
 
         </ul>
 
