--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <div class="col-md-6 d-flex flex-column justify-content-center pt-5">
                     <div>
                         <h1 class="display-2 font-weight-bold">I'm a Web Designer</h1>
-                        <p class="lead mb-4">Thanooz | B.Tech 2nd Year| VIT-AP</p>
+                        <p class="lead mb-4">Thanooz | B.Tech 3rd Year| VIT-AP</p>
                         <a href="#projectSection" class="btn btn-primary btn-lg mt-3">View My Projects</a>
                     </div>
                 </div>
